--- a/fondend/phungps24202/detail.html
+++ b/fondend/phungps24202/detail.html
@@ -96,7 +96,7 @@
           <div class="user-form">
             <form action="">
               <div class="form-group">
-                <textarea name="" id="" placeholder="Nhập nội dung bình luận (tiếng Việt có dấu)..."></textarea>
+                <textarea name="" id="" placeholder="Nhập nội dung bình luận (tiếng Việt có dấu)..."style="padding: 6px 180px 6px 12px;" ></textarea>
                 <button type="submit" class="user-button">GỬI BÌNH LUẬN</button>
               </div>
             </form>
