--- a/fondend/phungps24202/article.html
+++ b/fondend/phungps24202/article.html
@@ -55,12 +55,8 @@
 		</section>
 		<aside class="sidebar">
 			<div class="search-box">
-				<h2>Tìm kiếm</h2>
-				<form>
-					<label for="search">Tìm kiếm tin tức</label>
-					<input type="text" id="search" name="search">
-					<button type="submit">Go</button>
-				</form>
+				<input type="text" placeholder="Tìm kiếm" id="search" name="search">			
+				<button type="submit">Go</button>
 			</div>
 			<div class="categories">
 				<h2>Tin cùng chuyên mục</h2>
