Update And Complete Cart Count

--- a/frontdend/index.html
+++ b/frontdend/index.html
@@ -207,7 +207,7 @@
                                         </div>
                                         <div class="item-price">
                                             <div class="discount">
-                                                <p>66.000đ</p>
+                                                <p class="price">66000đ</p>
                                                 <span>88.000đ</span>
                                             </div>
                                         </div>
@@ -226,7 +226,7 @@
                                         </div>
                                         <div class="item-price">
                                             <div class="discount">
-                                                <p>66.000đ</p>
+                                                <p class="price">66000đ</p>
                                                 <span>88.000đ</span>
                                             </div>
                                         </div>
@@ -245,7 +245,7 @@
                                         </div>
                                         <div class="item-price">
                                             <div class="discount">
-                                                <p>66.000đ</p>
+                                                <p class="price">66000đ</p>
                                                 <span>88.000đ</span>
                                             </div>
                                         </div>
@@ -264,7 +264,7 @@
                                         </div>
                                         <div class="item-price">
                                             <div class="discount">
-                                                <p>66.000đ</p>
+                                                <p class="price">66000đ</p>
                                                 <span>88.000đ</span>
                                             </div>
                                         </div>
@@ -283,7 +283,7 @@
                                         </div>
                                         <div class="item-price">
                                             <div class="discount">
-                                                <p>66.000đ</p>
+                                                <p class="price">66000đ</p>
                                                 <span>88.000đ</span>
                                             </div>
                                         </div>
@@ -302,7 +302,7 @@
                                         </div>
                                         <div class="item-price">
                                             <div class="discount">
-                                                <p>66.000đ</p>
+                                                <p class="price">66000đ</p>
                                                 <span>88.000đ</span>
                                             </div>
                                         </div>
@@ -321,7 +321,7 @@
                                         </div>
                                         <div class="item-price">
                                             <div class="discount">
-                                                <p>66.000đ</p>
+                                                <p class="price">66000đ</p>
                                                 <span>88.000đ</span>
                                             </div>
                                         </div>
@@ -340,7 +340,7 @@
                                         </div>
                                         <div class="item-price">
                                             <div class="discount">
-                                                <p>66.000đ</p>
+                                                <p class="price">66000đ</p>
                                                 <span>88.000đ</span>
                                             </div>
                                         </div>
@@ -359,7 +359,7 @@
                                         </div>
                                         <div class="item-price">
                                             <div class="discount">
-                                                <p>66.000đ</p>
+                                                <p class="price">66000đ</p>
                                                 <span>88.000đ</span>
                                             </div>
                                         </div>
@@ -387,7 +387,7 @@
                                         </div>
                                         <div class="item-price">
                                             <div class="discount">
-                                                <p>66.000đ</p>
+                                                <p class="price">66000đ</p>
                                                 <span>88.000đ</span>
                                             </div>
                                         </div>
@@ -406,7 +406,7 @@
                                         </div>
                                         <div class="item-price">
                                             <div class="discount">
-                                                <p>66.000đ</p>
+                                                <p class="price">66000đ</p>
                                                 <span>88.000đ</span>
                                             </div>
                                         </div>
@@ -425,7 +425,7 @@
                                         </div>
                                         <div class="item-price">
                                             <div class="discount">
-                                                <p>66.000đ</p>
+                                                <p class="price">66000đ</p>
                                                 <span>88.000đ</span>
                                             </div>
                                         </div>
@@ -444,7 +444,7 @@
                                         </div>
                                         <div class="item-price">
                                             <div class="discount">
-                                                <p>66.000đ</p>
+                                                <p class="price">66000đ</p>
                                                 <span>88.000đ</span>
                                             </div>
                                         </div>
@@ -463,7 +463,7 @@
                                         </div>
                                         <div class="item-price">
                                             <div class="discount">
-                                                <p>66.000đ</p>
+                                                <p class="price">66000đ</p>
                                                 <span>88.000đ</span>
                                             </div>
                                         </div>
@@ -482,7 +482,7 @@
                                         </div>
                                         <div class="item-price">
                                             <div class="discount">
-                                                <p>66.000đ</p>
+                                                <p class="price">66000đ</p>
                                                 <span>88.000đ</span>
                                             </div>
                                         </div>
@@ -501,7 +501,7 @@
                                         </div>
                                         <div class="item-price">
                                             <div class="discount">
-                                                <p>66.000đ</p>
+                                                <p class="price">66000đ</p>
                                                 <span>88.000đ</span>
                                             </div>
                                         </div>
