--- a/fondend/cart/thanhtoan.html
+++ b/fondend/cart/thanhtoan.html
@@ -9,6 +9,10 @@
     <link rel="stylesheet" href="css-infor-user.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <style>
+        .box_nhanhang{
+            width: 100%;
+        }
+
         table thead th {
     font-size: 14px;
 }
@@ -33,9 +37,9 @@
     text-align: center;
 
 }
-        select{
+    select{
     display: block;
-    width: 80%;
+    width: 100%;
     border: 2px solid #f0f0f0;
     font-size: 14px;
     border-radius: 5px;
@@ -105,7 +109,7 @@
     <div class="cart" style="position: relative;">
         <p>Thanh Toán</p>
         <div class="gird_box2">
-            <div style="position: relative;" class="" >  
+            <div style="position: relative;" class="box_nhanhang" >  
                 <p class="title_dc_nhanhang">1-Địa chỉ nhận hàng:</p>
                     <form action="" class="form" id="form">
                         <div class="form-control">
