--- a/fondend/cart/index.html
+++ b/fondend/cart/index.html
@@ -22,14 +22,14 @@
             <!-- //nếu có sản phẩm  -->
             <table>
                 <thead>
-                    <tr><th width="2%">STT</th>
-                        <th></th>
-                        <th width="28%"  >Sản phẩm</th>
-                        <th width="8%"  >Đơn giá</th>
-                        <th width="15%"  >Khuyến mãi</th>
-                        <th width="14%"  >Số lượng</th>
-                        <th width="10%"  >Thành tiền</th>
-                        <th></th>
+                    <tr>
+                        <th width="5%">STT</th>
+                        <th width="15%">Hình ảnh</th>
+                        <th width="25%">Sản phẩm</th>
+                        <th width="15%">Giá bán</th>
+                        <th width="15%">Giá sale</th>
+                        <th width="12%">Số lượng</th>
+                        <th width="10%">Thành tiền</th>
                     </tr>
                 </thead>
                 <tbody>
