--- a/fondend/cart/thanhtoan.html
+++ b/fondend/cart/thanhtoan.html
@@ -131,7 +131,7 @@
                 <div class="box_hinhthuc_thanhtoan_left">
                     <form action="" class="hinhthuc_pay" method="POST">
                         <input type="radio" name="thanhtoan" onclick="reset_msg();">
-                        <label for="">Nhân viên giao sách thu tiền trực tiếp</label>
+                        <label for="">Nhân viên giao sách thu tiền trực tiếp</label><br>
                         <input type="radio" name="thanhtoan" onclick="reset_msg();">
                         <label for="">Chuyển khoản ngân hàng
                             <p style="font-size: 70%;margin-left: 2%;">
@@ -174,9 +174,8 @@
             </div>
         </div>
         <div style="position: relative;">
-            <a href="index.html"><button class="back_thanhtoan"> Quay lại <<=< /button></a>
-            <a style="text-decoration: none;" href="#"><label for="xacnhan_pay" onclick="return send();"
-                    class="pay_in_cart"> Đặt Hàng =>></label></a>
+            <a href="index.html"><button class="back_thanhtoan"> Quay lại <<= </button></a>
+            <a style="text-decoration: none;" href="#"><label for="xacnhan_pay" onclick="return send();"class="pay_in_cart"> Đặt Hàng =>></label></a>
             <input type="checkbox" class="xac_nhan" name="" id="xacnhan_pay">
             <label for="xacnhan_pay" class="thanhtoan_overlay"></label>
             <div class="thanhtoan_xacnhan" id="scoll">
@@ -196,14 +195,13 @@
                 <table class="title_item">
                     <thead>
                         <tr>
-                            <th width="2%">STT</th>
-                            <th></th>
-                            <th width="28%">Sản phẩm</th>
-                            <th width="10%">Đơn giá</th>
-                            <th width="15%">Khuyến mãi</th>
-                            <th width="14%">Số lượng</th>
+                            <th width="5%">STT</th>
+                            <th width="15%">Hình ảnh</th>
+                            <th width="25%">Sản phẩm</th>
+                            <th width="15%">Giá bán</th>
+                            <th width="15%">Giá sale</th>
+                            <th width="12%">Số lượng</th>
                             <th width="10%">Thành tiền</th>
-                            <th></th>
                         </tr>
                     </thead>
                     <tbody class="over_fontsize">
