--- a/fondend/cart/thanhtoan.html
+++ b/fondend/cart/thanhtoan.html
@@ -211,17 +211,16 @@
                                     src="https://book365.vn/upload/resize_cache/iblock/3c4/570_490_1/3c4bcadf08b7779ce399cfc77ad194a5.jpeg"
                                     alt=""></td>
                             <td style="text-align: left;" class="item_book_cart_specifically">
-                                <div class="cart_book_title">
-                                    <p class="">
+                                <div class="cart_book_title2">
+                                    <p class="title_book">
                                         Quân Đội Nga - Những Bí Mật Bạn Chưa Biết
                                     </p>
-                                    <p class="">
+                                    <p class="tacgia_book">
                                         Tác giả: Mai Hương, Văn Nam, Anh Ba (Sưu tầm, tuyển dịch)
                                     </p>
-                                    <p class="">
+                                    <p class="nxb_book">
                                         NXB: Quân đội Nhân dân
                                     </p>
-
                                 </div>
                             </td>
                             <td class="price_in_cart">
