--- a/fondend/cart/trangthaidonhang.html
+++ b/fondend/cart/trangthaidonhang.html
@@ -69,14 +69,14 @@ th, td {
             <p>Địa chỉ nhận hàng: <span id="font_size18">180 Tây Mỗ,Nam Từ Liêm,Hà Nội,Việt Nam</span></p>
             <table class="title_item" >
                 <thead>
-                    <tr><th width="2%">STT</th>
-                        <th></th>
-                        <th width="28%" >Sản phẩm</th>
-                        <th width="10%"  >Đơn giá</th>
-                        <th width="15%"  >Khuyến mãi</th>
-                        <th width="14%"  >Số lượng</th>
-                        <th width="10%"  >Thành tiền</th>
-                        <th></th>
+                    <tr>
+                        <th width="5%">STT</th>
+                        <th width="15%">Hình ảnh</th>
+                        <th width="25%">Sản phẩm</th>
+                        <th width="15%">Giá bán</th>
+                        <th width="15%">Giá sale</th>
+                        <th width="12%">Số lượng</th>
+                        <th width="10%">Thành tiền</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -94,7 +94,6 @@ th, td {
                                 <p class="nxb_book">
                                     NXB: Quân đội Nhân dân
                                 </p>
-                               
                             </div>
                         </td>
                         <td class="price_in_cart" >
