--- a/fondend/login-user/login.html
+++ b/fondend/login-user/login.html
@@ -49,6 +49,7 @@
    </body>
 
    <script src="https://kit.fontawesome.com/03e43a0756.js" crossorigin="anonymous"></script>
+   <script src="./index.js"></script>
 </body>
 
 </html>
