--- a/fondend/login-user/register.html
+++ b/fondend/login-user/register.html
@@ -16,7 +16,7 @@
             <div class="register-container">
                 <h1 style="text-align: center;">Tên Trang bán hàng</h1>
                 <h2 class="header">Register</h2>
-                <form class="form">
+                <form class="form" onsubmit="sigup()">
                     <div class="form grid-container">
                         <div class="input-group">
                             <label for="name">Full name</label>
@@ -63,6 +63,7 @@
     </body>
 
     <script src="https://kit.fontawesome.com/03e43a0756.js" crossorigin="anonymous"></script>
+    <script src="./register.html"></script>
 </body>
 
 </html>
