--- a/fondend/phungps24202/detail.html
+++ b/fondend/phungps24202/detail.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="/fondend/phungps24202/assets/css/" />
+        <link rel="stylesheet" href="./assets/css/detail-article.css" />
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css" />
         <title>Document</title>
         <style>
