--- a/fondend/phungps24202/detail.html
+++ b/fondend/phungps24202/detail.html
@@ -4,11 +4,14 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="/fondend/phungps24202/assets/css/" />
+        <link rel="stylesheet" href="/fondend/phungps24202/assets/css/detail.css" />
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css" />
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
+
         <title>Document</title>
         <style>
             @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;1,300&family=Roboto&display=swap');
+           
         </style>
     </head>
     <body>
@@ -66,6 +69,10 @@
                             <p>Tác giả: <a href="#">TS.Phạm Văn Công </a></p>
                             <p>Lĩnh vực: <a href="#">Sách thiếu nhi</a> | Loại sách: Sách in</p>
                         </div>
+                        <div class="detail2-author">
+                          <p>Tác giả: <a href="#">TS.Phạm Văn Công </a></p>
+                          <p>Lĩnh vực: <a href="#">Sách thiếu nhi</a> | Loại sách: Sách in</p>
+                      </div>
                         <span class="text-muted"
                             >&#9733; &#9733; &#9733; &#9733; &#9733;(0 đánh giá)
                             <a href="#">Click để đánh giá</a>
@@ -82,8 +89,8 @@
                         </div>
 
                         <div class="detail2-buy">
-                            <button type="button" value="Mua ngay"><i class="bi bi-currency-dollar"></i> Mua ngay</button>
-                            <button class="buy2" type="button" value="Mua ngay">Cho vào giỏ hàng <i class="bi bi-pci-card"></i></button>
+                            <button type="button" value="Mua ngay"><i class="fa-solid fa-money-check-dollar"></i> Mua ngay</button>
+                            <button class="buy2" type="button" value="Mua ngay"><i class="fa-solid fa-cart-plus"></i>Cho vào giỏ sách </button>
                         </div>
                     </div>
                 </div>
