--- a/fondend/login-user/login.html
+++ b/fondend/login-user/login.html
@@ -20,10 +20,12 @@
                <div class="input-group">
                   <label for="email">Email</label>
                   <input type="text" id="email" name="email" placeholder="Type your email" />
+                  <span id="email__error" style="color: red;"></span>
                </div>
                <div class="input-group">
                   <label for="password">Password</label>
                   <input type="password" id="password" name="password" placeholder="Type your password" />
+                  <span class="password__error" style="color: red"></span>
                </div>
                <button class="button">Login</button>
 
@@ -49,7 +51,7 @@
    </body>
 
    <script src="https://kit.fontawesome.com/03e43a0756.js" crossorigin="anonymous"></script>
-   <script src="./index.js"></script>
+   <script  type="module" src="./index.js"></script>
 </body>
 
 </html>
