--- a/fondend/login-user/forgotpass.html
+++ b/fondend/login-user/forgotpass.html
@@ -18,17 +18,20 @@
                 <h2 class="header">Forgot password</h2>
                 <form class="form">
                     <div class="input-group">
-                        <label for="number">Phone number</label>
-                        <input type="text" id="number" name="number" placeholder="Type your phone number" />
+                        <label for="email">Email</label>
+                        <input type="text" id="email" name="email" placeholder="Type your email" />
+                        <span id="email__error" style="color: red;"></span>
                     </div>
                     <div class="input-group">
                         <label for="password">A new password</label>
                         <input type="password" id="password" name="password" placeholder="Type your password" />
+                        <span class="password__error" style="color: red"></span>
                     </div>
                     <div class="input-group">
                         <label for="password">Enter the password</label>
-                        <input type="password" id="password" name="re-password"
+                        <input type="password" id="password-again" name="password-again"
                             placeholder="Type your enter the password" />
+                        <span class="error__passwordAgain" style="color: red"></span>
                     </div>
                     <button class="button">Send require</button>
                 </form>
@@ -53,6 +56,7 @@
     </body>
 
     <script src="https://kit.fontawesome.com/03e43a0756.js" crossorigin="anonymous"></script>
+    <script type="module" src="./index.js"></script>
 </body>
 
 </html>
