--- a/fondend/login-user/register.html
+++ b/fondend/login-user/register.html
@@ -21,24 +21,29 @@
                         <div class="input-group">
                             <label for="name">Full name</label>
                             <input type="text" id="name" name="name" placeholder="Type your full name" />
+                            <span class="name__error" style="color: red"></span>
                         </div>
                         <div class="input-group">
                             <label for="number">Phone number</label>
                             <input type="text" id="number" name="number" placeholder="Type your phone number" />
+                            <span class="number__error" style="color: red"></span>
                         </div>
                         <div class="input-group">
                             <label for="password">Password</label>
                             <input type="password" id="password" name="password" placeholder="Type your password" />
+                            <span class="password__error" style="color: red"></span>
                         </div>
                         <div class="input-group">
                             <label for="password">Enter the password</label>
-                            <input type="password" id="password" name="re-password"
+                            <input type="password" id="password-again" name="password-again"
                                 placeholder="Type your enter the password" />
+                                <span class="error__passwordAgain" style="color: red"></span>
                         </div>
                     </div>
                     <div class="input-group">
                         <label for="email">Email address</label>
                         <input type="text" id="email" name="email" placeholder="Type your email address" />
+                        <span id="email__error" style="color: red;"></span>
                     </div>
                     <button class="button">Register an account</button>
                 </form>
@@ -63,7 +68,7 @@
     </body>
 
     <script src="https://kit.fontawesome.com/03e43a0756.js" crossorigin="anonymous"></script>
-    <script src="./register.html"></script>
+    <script type="module" src="./index.js"></script>
 </body>
 
 </html>
