--- a/frontdend/index.html
+++ b/frontdend/index.html
@@ -115,7 +115,7 @@
                                 <div class="cart-modal-overlay">
                                     <div class="cart-modal">
                                         <h1 class="cart-is-empty">Giỏ hàng trống</h1>
-
+                                        <div id="close-btn"><i class="fa-solid fa-x"></i></div>
                                         <div class="product-rows"></div>
                                         <div class="total">
                                             <h1 class="cart-total">Tổng</h1>
@@ -210,6 +210,7 @@
                                                 <span>88.000đ</span>
                                             </div>
                                         </div>
+                                        <div class="item-button"><button>Add to cart</button></div>
                                     </div>
                                 </div>
                                 <div class="item-child">
@@ -228,6 +229,7 @@
                                                 <span>88.000đ</span>
                                             </div>
                                         </div>
+                                        <div class="item-button"><button>Add to cart</button></div>
                                     </div>
                                 </div>
                                 <div class="item-child">
@@ -246,6 +248,7 @@
                                                 <span>88.000đ</span>
                                             </div>
                                         </div>
+                                        <div class="item-button"><button>Add to cart</button></div>
                                     </div>
                                 </div>
                                 <div class="item-child">
@@ -264,6 +267,7 @@
                                                 <span>88.000đ</span>
                                             </div>
                                         </div>
+                                        <div class="item-button"><button>Add to cart</button></div>
                                     </div>
                                 </div>
                                 <div class="item-child">
@@ -282,6 +286,7 @@
                                                 <span>88.000đ</span>
                                             </div>
                                         </div>
+                                        <div class="item-button"><button>Add to cart</button></div>
                                     </div>
                                 </div>
                                 <div class="item-child">
@@ -300,6 +305,7 @@
                                                 <span>88.000đ</span>
                                             </div>
                                         </div>
+                                        <div class="item-button"><button>Add to cart</button></div>
                                     </div>
                                 </div>
                                 <div class="item-child">
@@ -318,6 +324,7 @@
                                                 <span>88.000đ</span>
                                             </div>
                                         </div>
+                                        <div class="item-button"><button>Add to cart</button></div>
                                     </div>
                                 </div>
                                 <div class="item-child">
@@ -336,6 +343,7 @@
                                                 <span>88.000đ</span>
                                             </div>
                                         </div>
+                                        <div class="item-button"><button>Add to cart</button></div>
                                     </div>
                                 </div>
                                 <div class="item-child">
@@ -354,6 +362,7 @@
                                                 <span>88.000đ</span>
                                             </div>
                                         </div>
+                                        <div class="item-button"><button>Add to cart</button></div>
                                     </div>
                                 </div>
                             </div>
@@ -381,6 +390,7 @@
                                                 <span>88.000đ</span>
                                             </div>
                                         </div>
+                                        <div class="item-button"><button>Add to cart</button></div>
                                     </div>
                                 </div>
                                 <div class="item-child">
@@ -399,6 +409,7 @@
                                                 <span>88.000đ</span>
                                             </div>
                                         </div>
+                                        <div class="item-button"><button>Add to cart</button></div>
                                     </div>
                                 </div>
                                 <div class="item-child">
@@ -417,6 +428,7 @@
                                                 <span>88.000đ</span>
                                             </div>
                                         </div>
+                                        <div class="item-button"><button>Add to cart</button></div>
                                     </div>
                                 </div>
                                 <div class="item-child">
@@ -435,6 +447,7 @@
                                                 <span>88.000đ</span>
                                             </div>
                                         </div>
+                                        <div class="item-button"><button>Add to cart</button></div>
                                     </div>
                                 </div>
                                 <div class="item-child">
@@ -453,6 +466,7 @@
                                                 <span>88.000đ</span>
                                             </div>
                                         </div>
+                                        <div class="item-button"><button>Add to cart</button></div>
                                     </div>
                                 </div>
                                 <div class="item-child">
@@ -471,6 +485,7 @@
                                                 <span>88.000đ</span>
                                             </div>
                                         </div>
+                                        <div class="item-button"><button>Add to cart</button></div>
                                     </div>
                                 </div>
                                 <div class="item-child">
@@ -489,6 +504,7 @@
                                                 <span>88.000đ</span>
                                             </div>
                                         </div>
+                                        <div class="item-button"><button>Add to cart</button></div>
                                     </div>
                                 </div>
                             </div>
